syntax = "proto3";

package api.helloworld.v1;

import "google/api/annotations.proto";

option go_package = "ito-deposit/api/helloworld/v1;v1";
option java_multiple_files = true;
option java_package = "api.helloworld.v1";

service Deposit {
	rpc CreateDeposit (CreateDepositRequest) returns (CreateDepositReply);
	rpc UpdateDeposit (UpdateDepositRequest) returns (UpdateDepositReply);
	rpc DeleteDeposit (DeleteDepositRequest) returns (DeleteDepositReply);
	rpc GetDeposit (GetDepositRequest) returns (GetDepositReply);
	rpc ListDeposit (ListDepositRequest) returns (ListDepositReply){
		option (google.api.http) = {
			get: "/deposit"
		};
	};

	rpc ReturnToken (ReturnTokenReq) returns (ReturnTokenRes){
		option (google.api.http) = {
			get: "/returntoken"
		};
	};

	rpc DecodeToken (ReturnTokenReq) returns (ReturnTokenRes){
		option (google.api.http) = {
			get: "/decodetoken"
		};
	};

	rpc GetDepositLocker (GetDepositLockerReq) returns (GetDepositLockerRes){
		option (google.api.http) = {
			get: "/getDepositLocker"
		};
	};
}

message GetDepositLockerReq{
	int32 locker_id = 1;
}

message GetDepositLockerRes{
	string address  =1;
	string name = 2;
	float longitude = 3;
	float latitude = 4;
	repeated Locker locker = 5;
	float free_duration = 6;
}

message Locker{
	string name = 1;
	string description = 2;
	string size = 3;
	int32 num = 4;
	float hourly_rate = 5;
	int32 locker_type = 6;
	float free_duration = 7;
}


message CreateDepositRequest {

}
message CreateDepositReply {}

message UpdateDepositRequest {}
message UpdateDepositReply {}

message DeleteDepositRequest {}
message DeleteDepositReply {}

message GetDepositRequest {}
message GetDepositReply {}

message ListDepositRequest {}
message ListDepositReply {}

message ReturnTokenReq{

}

message ReturnTokenRes{
	string token  =1;
	int32 coe =2 ;
	string msg = 3;
}

message decodeTokenRes{
	string data  =1;
	int32 coe =2 ;
	string msg = 3;
}